2006-06-12 Sandro Santilli <strk@refractions.net>

	* source/geom/CoordinateArraySequence.cpp: explicitly invoked
	CoordinateSequence (copy) ctor - suggested by GCC warning.
	* source/headers/geos/geom/CoordinateSequence.h: added default
	ctor and copy ctor ( protected ).
	* acsite.m4, configure.in, source/headers/geos/platform.h.in:
	Check for int64_t type for int64 typedef.
	* source/algorithm/ConvexHull.cpp,
	source/algorithm/PointLocator.cpp,
	source/algorithm/SimplePointInAreaLocator.cpp,
	source/geom/Envelope.cpp,
	source/geom/LineString.cpp,
	source/geomgraph/EdgeNodingValidator.cpp,
	source/geomgraph/EdgeRing.cpp,
	source/geomgraph/GeometryGraph.cpp,
	source/geomgraph/PlanarGraph.cpp,
	source/geomgraph/TopologyLocation.cpp,
	source/geomgraph/index/MonotoneChainEdge.cpp,
	source/geomgraph/index/SimpleEdgeSetIntersector.cpp,
	source/geomgraph/index/SimpleMCSweepLineIntersector.cpp,
	source/headers/geos/geom/CoordinateArraySequenceFactory.h,
	source/headers/geos/geom/CoordinateArraySequenceFactory.inl,
	source/headers/geos/geom/LineSegment.inl,
	source/headers/geos/geom/LineString.h,
	source/headers/geos/geom/Location.h,
	source/headers/geos/geomgraph/EdgeEndStar.h,
	source/headers/geos/geomgraph/TopologyLocation.h,
	source/headers/geos/index/strtree/AbstractSTRtree.h,
	source/headers/geos/index/strtree/SIRtree.h,
	source/headers/geos/index/strtree/STRtree.h,
	source/headers/geos/noding/SegmentNodeList.h,
	source/headers/geos/planargraph/DirectedEdgeStar.h,
	source/headers/geos/planargraph/Node.h,
	source/headers/geos/planargraph/PlanarGraph.h,
	source/headers/geos/profiler.h,
	source/headers/geos/simplify/DouglasPeuckerLineSimplifier.h,
	source/headers/geos/simplify/TaggedLineString.h,
	source/index/chain/MonotoneChainBuilder.cpp,
	source/index/strtree/AbstractSTRtree.cpp,
	source/index/strtree/SIRtree.cpp, source/index/strtree/STRtree.cpp,
	source/index/sweepline/SweepLineIndex.cpp,
	source/noding/SegmentNodeList.cpp,